--- a/admin-panel/src/pages/auth/Login/Login.module.css
+++ b/admin-panel/src/pages/auth/Login/Login.module.css
@@ -78,6 +78,7 @@
   margin-right: 20px;
 }
 .registerLink {
+  text-decoration: none;
   font-family: "Vazirmatn";
   font-weight: 400;
   font-style: Regular;
