--- a/admin-panel/src/pages/auth/Register/RegistrationForm.module.css
+++ b/admin-panel/src/pages/auth/Register/RegistrationForm.module.css
@@ -79,6 +79,7 @@
   margin-right: 20px;
 }
 .registerLink {
+  text-decoration: none;
   font-family: "Vazirmatn";
   font-weight: 400;
   font-style: Regular;
